<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="30dp"
    android:layout_marginStart="16dp">

    <TextView
        android:id="@+id/username"
        android:layout_width="133dp"
        android:layout_height="20dp"
        android:maxWidth="80dp"
        android:minWidth="70dp"
        android:text="@string/username"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score"
        android:layout_width="71dp"
        android:layout_height="20dp"
        android:maxWidth="100dp"
        android:minWidth="100dp"
        android:text="@string/score"
        android:textAlignment="center"
        android:textStyle="bold"
        app:circularflow_viewCenter="@id/score"
        app:layout_constraintStart_toEndOf="@+id/username"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:minWidth="150dp"
        android:maxWidth="150dp"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/score"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>