<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.QuizQuestionsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">
            <TextView
                android:id="@+id/questionId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:gravity="center"
                android:text="@string/question"
                android:textColor="#363A43"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progressbar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:max="10"
                android:minHeight="50dp"
                android:progress="0"
                app:layout_constraintBottom_toTopOf="@+id/answer_one"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/questionId" />

            <TextView
                android:id="@+id/progressbar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:padding="10dp"
                android:text="@string/currentPosition"
                android:textColorHint="@color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/answer_one"
                app:layout_constraintStart_toEndOf="@+id/progressbar"
                app:layout_constraintTop_toBottomOf="@+id/questionId" />

            <TextView
                android:id="@+id/answer_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/default_answer_stroke_bg"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/answer1"
                android:textColor="#757575"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/submit_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.473"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/questionId"
                app:layout_constraintVertical_bias="0.442" />

            <TextView
                android:id="@+id/answer_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/default_answer_stroke_bg"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/answer2"
                android:textColor="#757575"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/submit_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.157"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/answer_one"
                app:layout_constraintVertical_bias="0.023" />

            <TextView
                android:id="@+id/answer_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/default_answer_stroke_bg"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/answer3"
                android:textColor="#757575"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/submit_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.473"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/answer_two"
                app:layout_constraintVertical_bias="0.051" />

            <TextView
                android:id="@+id/answer_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/default_answer_stroke_bg"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/answer4"
                android:textColor="#757575"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/submit_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.157"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/answer_three"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/blue"
                android:text="@string/submit"
                app:layout_constraintBottom_toTopOf="@+id/abort_button" />

            <Button
                android:id="@+id/abort_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/blue"
                android:text="@string/abort"
                app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>